latest theme updates: fixed buttons on mobile and with lots of text

--- a/bundle/palm.css
+++ b/bundle/palm.css
@@ -2896,7 +2896,6 @@ button,
     outline: 1px dotted; }
 
 .btn, .button, .button-submit, .button--spaced, a.button, .button--ghost, .button--footer, .button--reversed, .button--disabled, .button--white, .button--buy {
-  height: 2.5rem;
   margin: 0;
   margin-bottom: 0.9375rem;
   box-shadow: none;
@@ -2914,10 +2913,11 @@ button,
   color: #FFFFFF;
   border: 1px solid #086D9A;
   border-radius: 4px;
-  width: auto; }
+  width: auto;
+  min-height: 2.5em; }
   @media screen and (max-width: 45rem) {
     .btn, .button, .button-submit, .button--spaced, a.button, .button--ghost, .button--footer, .button--reversed, .button--disabled, .button--white, .button--buy {
-      height: 2.5em; } }
+      width: 100%; } }
   @media screen and (max-width: 45rem) {
     .btn, .button, .button-submit, .button--spaced, a.button, .button--ghost, .button--footer, .button--reversed, .button--disabled, .button--white, .button--buy {
       line-height: 2em; } }
@@ -7989,4 +7989,4 @@ select > option {
     text-decoration: none; }
 
 
-/*# sourceMappingURL=palm.css-8f623584f1384659c7e4.map*/
+/*# sourceMappingURL=palm.css-c6ba4a84ee2b00d1e5f1.map*/
